style(project-management): stretch header children; ensure tab-container min-width:100% and grid-auto-columns; tab-items width:100% to keep 3-way split

--- a/src/components/ProjectManagement/Tab/Tab.scss
+++ b/src/components/ProjectManagement/Tab/Tab.scss
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 100%;
+  min-width: 100%;
+  box-sizing: border-box;
   background-color: #fff;
   position: relative;
   padding-bottom: 0; // ensure indicator sits on bottom edge
@@ -9,6 +11,7 @@
   margin-left: -22px;
   margin-right: -22px;
   width: calc(100% + 44px);
+  grid-auto-columns: 1fr;
 }
 
 // full-width base track
@@ -21,6 +24,8 @@
 }
 
 .tab-item {
+  width: 100%;
+  min-width: 0;
   height: 48px;
   display: flex;
   align-items: center;
